--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "",
+  "homepage": "https://alpha3625.github.io/ITStart_test/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
