--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "json-server": "json-server --watch seminars.json --port 3001"
+    "json-server": "json-server --watch src/database/seminars.json --port 3001"
   },
   "dependencies": {
     "axios": "^1.7.9",
