--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "json-server": "json-server --watch database/seminars.json --port 3001"
+    "json-server": "json-server --watch database/seminars.json --port 3001",
+    "all": "npm run json-server & npm run dev"
   },
   "dependencies": {
     "axios": "^1.7.9",
